--- a/roles/php/handlers/main.yml
+++ b/roles/php/handlers/main.yml
@@ -1,7 +1,6 @@
 ---
-# Debian/Ubuntu
-- name: Start PHP7.1-FPM
-  service: name=php7.1-fpm state=started
+- name: Start PHP-FPM
+  service: name={{php_version}}-fpm state=started
 
-- name: Restart PHP7.1-FPM
-  service: name=php7.1-fpm state=restarted
+- name: Restart PHP-FPM
+  service: name={{php_version}}-fpm state=restarted
