set vendor dir to install roles to

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@ vault.yml
 hosts
 
 # Ansible roles installed through galaxy
-telusdigital.apt-repository/
-telusdigital.logrotate/
+vendor/roles/
 
 # Testing Stuff
 .testing/
