--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,10 @@
 # Ansible Config
 [defaults]
 inventory = hosts
-roles_path = roles
+roles_path = vendor/roles
 vault_password_file = .vault_pass
+force_color = True
+force_handlers = True
 
 [ssh_connection]
 # Define some additional arguments for how we want ssh to work
