--- a/roles/php/tasks/php-fpm.yml
+++ b/roles/php/tasks/php-fpm.yml
@@ -1,9 +1,7 @@
 ---
 # Add our own customized .conf file
 - name: Add php-fpm Resource Pool
-  template:
-    src: www.conf.j2
-    dest: "{{php_config_prefix}}/fpm/pool.d/www.conf"
+  template: src=www.conf.j2 dest="{{php_config_prefix}}/fpm/pool.d/www.conf"
 
 # Ensure the php-fpm ini's time
 - name: php-fpm/php.ini - set timezone
@@ -19,6 +17,5 @@
     line: 'expose_php=0'
 
 - name: Restart php-fpm
-  service:
-    name: "{{php_config_prefix}}-fpm"
-    state: restarted
+  service: name="{{php_version}}-fpm" state=restarted
+
