added the path to the users home/.ssh directory so its clear where the authorized_keys file is located for the particular user

--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -8,11 +8,6 @@
     password: '{{ vault_appadmin_password }}'
     shell: /bin/bash
 
-- name: Enable Remote (person) Access to Admin
-  authorized_key:
-    user: '{{ admin_username }}'
-    key: "{{ local_authorized_key }}"
-
 # User that will be using our application
 - name: Add Application User
   user:
@@ -22,7 +17,15 @@
     generate_ssh_key: yes
     ssh_key_bits: 4096
 
+- name: Enable Remote (person) Access to Admin
+  authorized_key:
+    user: '{{ admin_username }}'
+    key: "{{ local_authorized_key }}"
+    path: '/home/{{ admin_username }}/.ssh/authorized_keys'
+
 - name: Enable Remote (Person) Access to Appuser
   authorized_key:
     user: '{{ appuser_username }}'
     key: "{{ local_authorized_key }}"
+    path: '/home/{{ appuser_username }}/.ssh/authorized_keys'
+
